fix: card section mobile responsive

--- a/style.css
+++ b/style.css
@@ -106,26 +106,7 @@ h1 span {
   font-weight: 600;
   margin-bottom: 1em;
 }
-/*
-.card {
-  cursor: pointer;
-}
 
-.container .card {
-  width: 35vw;
-  height: 44vh;
-  background-color: #fcfcfc;
-  border-radius: .3em;
-  box-shadow: -2.23292px 1.11646px 25.6785px 8.93167px rgba(0, 0, 0, 0.05);
-  transition: all .2s ease-in;
-  cursor: pointer;
-}  
-
-.container > .card:hover {
-  transform: scale(1.01);
-  box-shadow: -2.23292px 1.11646px 25.6785px 8.93167px rgba(0, 0, 0, 0.10);
-}
-*/
 .card p {
   padding-left: 1em;
   padding-top: .3em;
@@ -269,4 +250,12 @@ footer {
   .tauhid-left, .tauhid-right {
     display: none;
   }
+  /* featured videos */
+  .featured-video-heading {
+    font-size: 1.4em;
+  }
+  .card p {
+    padding: 0.1em;
+    font-size: 0.85em;
+  } 
 }
